...
import prasad.vennam.design.settings.SettingsScreen
import prasad.vennam.design.settings.SettingsViewModel
import prasad.vennam.design.settings.ThemeOptions

enum class ShowcaseTab(val title: String) {
    HOME("Home"),
    SETTINGS("Settings")
}

@Composable
fun MainScreen(
    viewModel: SettingsViewModel,
    options: ThemeOptions,
...
